--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,13 +30,34 @@
 # available at http://guides.rubyonrails.org/i18n.html.
 
 en:
- static_pages:
+  title: "Ruby on Rails Tutorial Sample App"
+  layouts:
+    application:
+    title: "Ruby on Rails Tutorial Sample App"
+
+    header:
+      content1: "sample app"
+      content2: "Home"
+      content3: "Help"
+      content4: "Log in"
+
+    footer:
+      sm1: "The"
+      sm2: "by"
+      content1: "Ruby on Rails Tutorial"
+      content2: "Michael Hartl"
+      content3: "About"
+      content4: "Contact"
+      content5: "News"
+
+  static_pages:
     home:
       title: "Home"
-      h1: "Sample App"
-      p1: "This is the home page for the"
-      a1: "Ruby on Rails Tutorial"
-      p2: "sample application."
+      h1: "Welcome to the Sample App"
+      h2: "This is the home page for the"
+      content1: "Ruby on Rails Tutorial"
+      h2_2: "sample application."
+      content2: "Sign up now!"
     help:
       title: "Help"
       h1: "Help"
@@ -61,6 +82,9 @@ en:
       h1: "Contact"
       p1: "Contact the Ruby on Rails Tutorial about the sample app at the"
       p2: "contact page"
-    helpers:
-      title: "Ruby on Rails Tutorial Sample App"
-
+  users:
+    new:
+      title: "Sign up"
+      h1: "Sign up"
+      p: "This will be a signup page for new users."
+      
